resources/network-policies/allow-namespace-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backoffice-same-namespace
  namespace: test-network-policy
spec:
  podSelector:
    matchLabels:
      backoffice: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              backoffice: "true"
