resources/network-policies/default-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: test-network-policy
spec:
  podSelector: {}  # Block all traffic
  policyTypes:
    - Ingress
    - Egress
